--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <a href="https://locus-news.firebaseapp.com/">Live View</a>
       </div>
       <div class="project project2">
-        <h2>Chore List</h2>
+        <h2>Property Manager</h2>
         <h4>#Reactjs #Redux #PostgreSQL #Nodejs #Axios</h4>
-        <p>An app to be able to create chores, store the chores on a back-end using Nodejs and serving it using redux-promise-middleware
-          and axios.
+        <p>An app to be able to manage different properties as an owner. This is project is still underway, please
+          see github for more details.
         </p>
-        <a href="">Github</a>
-        <a href="">Live View</a>
+        <a href="https://github.com/onkarg/house-hackers">Github</a>
+        <a href="#">Live View(Coming Soon)</a>
       </div>
       <div class="project project3">
         <h2>Loan Wizard</h2>
