--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="project project2">
         <h2>Property Manager</h2>
         <h4>#Reactjs #Redux #PostgreSQL #Nodejs #Axios</h4>
-        <p>An app to be able to manage different properties as an owner. This is project is still underway, please
+        <p>An app to be able to manage different properties as an owner. This project is still underway, please
           see github for more details.
         </p>
         <a href="https://github.com/onkarg/house-hackers">Github</a>
