--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
   <title>
     <onkar />
   </title>
@@ -53,7 +54,7 @@
       <div class="project project2">
         <h2>Property Manager</h2>
         <h4>#Reactjs #Redux #PostgreSQL #Nodejs #Axios</h4>
-        <p>An app to be able to manage different properties as an owner. This project is still underway, please
+        <p>An app to be able to manage different properties as an owner. This is project is still underway, please
           see github for more details.
         </p>
         <a href="https://github.com/onkarg/house-hackers">Github</a>
